# websaw

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  password.txt  pyproject.toml  setup.py  websaw.py
.github/workflows/: python-publish.yml  run_test.yaml
apps/: __init__.py
apps/.service/: service.storage  session.secret
apps/app_mixin1/: __init__.py  common.py  controllers.py
apps/app_mixin1/databases/: storage.db
apps/auth/: __init__.py  common.py  controllers.py  datatables_server.py  db_admin.py  fixtures.py  form.py  models.py  myform.py
apps/auth/databases/: storage.db
apps/auth/templates/: custom_form.html  index.html  layout.html  layout_app.html
apps/baseic/: controllers.py  utemplates.py
apps/basic/: controllers.py  utemplates.py
apps/common/: common_components.py  common_fixtures.py  common_models.py  common_utils.py
apps/db_admin/: common.py  controller.py  controllers.py  datatables_client.py  datatables_utils.py  db_admin.py  dbadmin_templates.py  fixtures.py  form_1.py  models.py
apps/db_admin/databases/: fb87181b96a99be45f5a23f4277867ce_auth_group.table  fb87181b96a99be45f5a23f4277867ce_auth_user.table  fb87181b96a99be45f5a23f4277867ce_group_users.table  storage.db
apps/db_admin/templates/: auth copy.html  datatables.html  index.html  layout.html  layout_app.html  login.html
apps/grid/: controller.py  grid_components.py  grid_templates.py  settings.py
apps/grid/downloads/: todo.csv
apps/grid/uploads/: todo.csv
apps/group_session/: __init__.py  controllers.py
apps/landing/: app_model.py  controllers.py  my_comps.py  utemplates.py
apps/mixin/: utemplates.py
apps/mixins/auth/: __init__.py  auth_db.py  (+8 more)
apps/sample_blog/: blog_components.py  blog_db.py  blog_model.py  blog_templates.py  common.py  controllers.py  menus.py  models.py
apps/sample_crud/: controller.py  grid_templates.py
apps/samplee_crud/: __init__.py  grid_components.py
apps/scaffold/: app_db.py  controllers.py  utemplates.py
apps/simple/: controllers.py  utemplates.py
apps/skeleton/: __init__.py  controllers.py  templates.py
apps/spa_scaffold/: __init__.py  utemplates.py
apps/spa_todo_MVC/: __init__.py  controllers.py  utemplates.py
apps/todo/: __init__.py  controller.py  todo_components.py  todo_db.py  todo_model.py  todo_templates.py
apps/vue_todo/: controllers.py  todo_db.py  todo_model.py  utemplates.py
apps/xauth/: controllers.py
tests/: test_install.py
websaw/: __init__.py  __main__.py  base_form.py  base_grid.py  cli.py  default_app.py  default_context.py  error_pages.py  renders.py  server_adapters.py  templates.py  watcher.py
websaw/core/: __init__.py  _core.py  app.py  app_config.py  context.py  exceptions.py  fixture.py  globs.py  install.py  loggers.py  reloader.py  static_registry.py  utils.py
websaw/fixtures/: __init__.py  dal.py  dbregistry.py  env.py  session.py  template.py  url.py  xauth.py
(+93 files in other folders)
